# yes

./: Makefile  yes.cabal
app/: Main.hs  main.c
