name:                yes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/satosystems/yes#readme
license:             BSD3
license-file:        LICENSE
author:              Satoshi Ogata
maintainer:          satosystems@gmail.com
copyright:           2017 (c) Satoshi Ogata
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable yes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yes

